# fastapi-backend

./: .env  README.md  pyproject.toml  requirements.txt  test.db
app/: config.py  main.py  models.py  schemas.py  services.py
